package com.salwa.zawody.domain;

/**
 *
 * @author Piotr Karasiński
 */
public enum Discipline {
    PISTOL,
    RIFLE,
    SHOTGUN
}
